--- a/vagrant/react_example/readme
+++ b/vagrant/react_example/readme
@@ -1,2 +1,7 @@
 React editor: https://codepen.io/ericnakagawa/pen/vXpjwZ?editors=0010
 React tutorial: https://facebook.github.io/react/tutorial/tutorial.html
+
+
+Setting up react .jsx support in pycharm:
+ https://blog.jetbrains.com/webstorm/2015/05/ecmascript-6-in-webstorm-transpiling/
+ http://mcculloughwebservices.com/2015/12/10/webstorm-babel-6-plugin/
