--- a/vagrant/react_example/readme
+++ b/vagrant/react_example/readme
@@ -8,3 +8,5 @@ Setting up react .jsx support in pycharm:
 
  Concept piece
  http://aviadas.com/blog/2015/08/05/evaluating-react-dot-js-and-flask/
+ Advanced react concepts
+ https://css-tricks.com/learning-react-router/
