Chore: Added useful article on how to use composition

--- a/vagrant/react_example/readme
+++ b/vagrant/react_example/readme
@@ -16,3 +16,5 @@ Setting up react .jsx support in pycharm:
  https://facebook.github.io/react/docs/state-and-lifecycle.html
  jsx in depth
  https://facebook.github.io/react/docs/jsx-in-depth.html
+ composition vs inheritance
+ https://facebook.github.io/react/docs/composition-vs-inheritance.html
