Chore: Added useful articles regarding webpack and its application

--- a/vagrant/react_example/readme
+++ b/vagrant/react_example/readme
@@ -20,3 +20,8 @@ Setting up react .jsx support in pycharm:
  https://facebook.github.io/react/docs/composition-vs-inheritance.html
  Why use key for siblings
  https://facebook.github.io/react/docs/reconciliation.html
+ Webpack
+ https://www.codementor.io/tamizhvendan/tutorials/beginner-guide-setup-reactjs-environment-npm-babel-6-webpack-du107r9zr
+ In-depth
+ https://blog.risingstack.com/using-react-with-webpack-tutorial/
+ https://www.codementor.io/tamizhvendan/tutorials/beginner-guide-setup-reactjs-environment-npm-babel-6-webpack-du107r9zr
