--- a/vagrant/react_example/readme
+++ b/vagrant/react_example/readme
@@ -25,3 +25,7 @@ Setting up react .jsx support in pycharm:
  In-depth
  https://blog.risingstack.com/using-react-with-webpack-tutorial/
  https://www.codementor.io/tamizhvendan/tutorials/beginner-guide-setup-reactjs-environment-npm-babel-6-webpack-du107r9zr
+
+ ESLint
+ http://www.robinwieruch.de/the-soundcloud-client-in-react-redux-eslint/
+ http://survivejs.com/webpack/advanced-techniques/linting/
