Chore: Added react ideas and methodologies

--- a/vagrant/react_example/readme
+++ b/vagrant/react_example/readme
@@ -29,3 +29,6 @@ Setting up react .jsx support in pycharm:
  ESLint
  http://www.robinwieruch.de/the-soundcloud-client-in-react-redux-eslint/
  http://survivejs.com/webpack/advanced-techniques/linting/
+
+ React ideas
+ https://camjackson.net/post/9-things-every-reactjs-beginner-should-know
