Added useful react-redux tutorials

--- a/vagrant/react_example/readme
+++ b/vagrant/react_example/readme
@@ -37,3 +37,8 @@ Setting up react .jsx support in pycharm:
  Setting up React with webpack
  http://jpsierens.com/tutorial-react-redux-webpack/
  http://www.jchapron.com/2015/08/14/getting-started-with-redux/
+
+ React Redux:
+ https://www.codementor.io/reactjs/tutorial/intro-to-react-redux-pros
+ https://www.codementor.io/rowland/tutorials/handling-ajax-in-your-react-application-with-agility-0-du10866vz
+ 
