--- a/vagrant/react_example/readme
+++ b/vagrant/react_example/readme
@@ -45,4 +45,7 @@ Setting up react .jsx support in pycharm:
 
  Video Course
  https://egghead.io/courses/getting-started-with-redux
+ Specifically Middleware
  https://www.youtube.com/watch?v=T961O9nsu9Y
+ React with Redux
+ https://www.youtube.com/watch?v=YmUL5DXO3Ew
