Chore: Added a useful video course on redux

--- a/vagrant/react_example/readme
+++ b/vagrant/react_example/readme
@@ -41,4 +41,7 @@ Setting up react .jsx support in pycharm:
  React Redux:
  https://www.codementor.io/reactjs/tutorial/intro-to-react-redux-pros
  https://www.codementor.io/rowland/tutorials/handling-ajax-in-your-react-application-with-agility-0-du10866vz
- 
+
+
+ Video Course
+ https://egghead.io/courses/getting-started-with-redux
